[BA-884][minor] Fixed text-area error message overlapping formfield border on close,cancel notification modals (#218)

--- a/cfx-frontend/src/theme/base.scss
+++ b/cfx-frontend/src/theme/base.scss
@@ -1507,3 +1507,7 @@ app-part-relation {
     opacity: 1;
   }
 }
+
+.modal-notification .textarea--container .textarea-field .mat-mdc-form-field-subscript-wrapper .mat-mdc-form-field-error-wrapper .mat-mdc-form-field-error .error-message {
+  padding-top: 10px;
+}
